[package]
name = "aggregator-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
eyre = "0.6.8"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
shuttle-axum = "0.17.0"
shuttle-runtime = "0.17.0"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
