[package]
name = "aggregator-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
eyre = "0.6.8"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_with = "3.1.0"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
